@@ -26,7 +26,7 @@ puts 'New user created: ' << user2.name
 FILE
       end
     end
-    if prefer :starter_app, 'subdomains'
+    if prefer :starter_app, 'subdomains_app'
       gsub_file 'db/seeds.rb', /First User/, 'user1'
       gsub_file 'db/seeds.rb', /Second User/, 'user2'
     end
