@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.1.7"
+  VERSION = "2.1.8"
 end
